commit 8 Mei sore

--- a/index.html
+++ b/index.html
@@ -16,8 +16,29 @@
     </header>
     <hr />
 
-    <h1>Your Trusted Travel Agent's</h1>
-    <br />
-    <h5>Your happiness is our happiness</h5>
+    <article class="container">
+      <header>
+        <h1>Ch Portfolio</h1>
+        <h3>Your happiness is our happiness</h3>
+      </header>
+
+      <section class="container-content">
+        <div class="container-content-item1"></div>
+        <div class="container-content-item">
+          <header>
+            <h3>Contact Us</h3>
+            <h6>Sales akan menghubungi anda 1x24 Jam setelah data kami terima</h6>
+          </header>
+          <section class="content-fill"><label for="name">Your Name :</label> <br /><input type="text" id="name" placeholder="First and last name" /></section>
+          <section class="content-fill"><label for="email">Email Address :</label> <br /><input type="text" id="email" placeholder="example@email.com" /></section>
+          <section class="content-fill">
+            <label for="name">What are you interested in?</label>
+            <br />
+          </section>
+        </div>
+      </section>
+    </article>
   </body>
+
+  <script src="js/script.js"></script>
 </html>
