--- a/index.html
+++ b/index.html
@@ -8,24 +8,34 @@
     <div class="main">
       <div class="main-container">
         <header class="navigation">
-          <div>ini Logo</div>
+          <div class="img"><img src="assets/NewTux.png" alt="logo" style="height: 30px" /></div>
 
-          <nav>
-            <button>Home</button>
-            <button>Our Packages</button>
-            <button>Call Us</button>
+          <nav class="button">
+            <button><a href="#home">Home</a></button>
+            <button><a href="#packages">Our Packages</a></button>
+            <button><a href="#call_action">Call Us</a></button>
           </nav>
         </header>
         <hr />
 
         <article class="container">
           <header>
-            <h1>Ch Portfolio</h1>
+            <h1 id="home">Ch Portfolio</h1>
             <h3>Your happiness is our happiness</h3>
           </header>
 
           <section class="container-content">
-            <div class="container-content-item1"></div>
+            <div class="container-content-item1">
+              <div class="hero"><img src="assets/wisata.jpg" alt="wisata" width="550px" /></div>
+              <p>"Liburan jadi menyenangkan bersama Travel Agentku"</p>
+              <div class="card">
+                <div class="card-header">
+                  <img src="assets/asdf.png" alt="Icon" class="icon" />
+                  <p>Florence Hughes <br /><span style="font-size: xx-small">Ibu Rumah Tangga, 28</span></p>
+                  <br />
+                </div>
+              </div>
+            </div>
 
             <div class="container-content-item">
               <header>
@@ -50,11 +60,84 @@
               </form>
             </div>
           </section>
-          <section>
-            <div>Our Package</div>
-          </section>
         </article>
       </div>
+      <section class="content-fill2">
+        <div id="packages">Our Packages</div>
+      </section>
+      <div class="main-container2">
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/star.png" alt="Icon" class="icon" />
+            <h3>Bali</h3>
+          </div>
+          <div class="card-body">
+            <p>Travel dan wisata di Bali. kunjungi cagar budaya dan kuliner yang menarik</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/star.png" alt="Icon" class="icon" />
+            <h3>Japan</h3>
+          </div>
+          <div class="card-body">
+            <p>Travel dan wisata di Japan. kunjungi cagar budaya dan kuliner yang menarik.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/star.png" alt="Icon" class="icon" />
+            <h3>Singapore</h3>
+          </div>
+          <div class="card-body">
+            <p>Travel dan wisata di Singapore. kunjungi cagar budaya dan kuliner yang menarik</p>
+          </div>
+        </div>
+      </div>
+      <div class="main-container2">
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/star.png" alt="Icon" class="icon" />
+            <h3>Bandung</h3>
+          </div>
+          <div class="card-body">
+            <p>Travel dan wisata di Bandung. kunjungi cagar budaya dan kuliner yang menarik</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/star.png" alt="Icon" class="icon" />
+            <h3>Surabaya</h3>
+          </div>
+          <div class="card-body">
+            <p>Travel dan wisata di Surabaya. kunjungi cagar budaya dan kuliner yang menarik</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="assets/star.png" alt="Icon" class="icon" />
+            <h3>Third Feature</h3>
+          </div>
+          <div class="card-body">
+            <p>this description support and extend the bullet point above</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <section class="section3">
+        <div class="closing">
+          <h1>Your Closing Argument Headline</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam consectetur sunt quasi aliquid assumenda facilis nemo voluptate.</p>
+        </div>
+
+        <button id="call_action">Call to Action</button>
+      </section>
+      <hr />
+
+      <footer style="text-align: center">
+        <div>Moqups</div>
+        <p style="font-size: small; color: gray">Term of Service</p>
+      </footer>
     </div>
   </body>
 
